Refactoring configurations
